--- a/src/main/webapp/inscription.xhtml
+++ b/src/main/webapp/inscription.xhtml
@@ -9,11 +9,11 @@
     </h:head>
     <h:body>
         <h:form>
-            UserName <h:inputText value="#{JoinBean.user.userName}"/><br/>
-            Email Address <h:inputText value="#{JoinBean.user.email}"/><br/>
-            Password <h:inputSecret value="#{JoinBean.user.password}"/><br/>
-            Confirm your password <h:inputSecret value="#{JoinBean.user.password}"/><br/>
-            <h:commandButton value="submit" action="#{JoinBean.join}"/>
+            UserName <h:inputText value="#{joinBean.user.userName}"/><br/>
+            Email Address <h:inputText value="#{joinBean.user.email}"/><br/>
+            Password <h:inputSecret value="#{joinBean.user.password}"/><br/>
+            Confirm your password <h:inputSecret value="#{joinBean.user.password}"/><br/>
+            <h:commandButton value="submit" action="#{joinBean.join}"/>
         </h:form>
     </h:body>
 </html>
