--- a/src/main/webapp/restricted/test.xhtml
+++ b/src/main/webapp/restricted/test.xhtml
@@ -8,6 +8,7 @@
     <h:body>
         Hello from Facelets
         <h:outputText value="#{sessionScope.userSession.userName}"/>
+        <a href="setting.xhtml">Setting</a>
     </h:body>
 </html>
 
