--- a/src/main/webapp/restricted/setting.xhtml
+++ b/src/main/webapp/restricted/setting.xhtml
@@ -1,17 +1,39 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
         <h1>Profile</h1>
-        UserName <h:outputText value="#{sessionScope.userSession.userName}"/><br/>
-        Email <h:outputText value="#{sessionScope.userSession.email}"/><br/>
+        UserName <h:outputText value="#{userSession.userName}"/><br/>
+        Email <h:outputText value="#{userSession.email}"/><br/>
         
         <h1>Image</h1>
+        <h:dataTable value="#{imageController.getImagesByUser(userSession)}" 
+                     var="image" 
+                     border="1">
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Title"/>
+                </f:facet>
+                <h:outputText value="#{image.title}"/>
+            </h:column>
+        </h:dataTable>
         <h1>Comment</h1>
+        <h:dataTable value="#{commentController.getCommentsByUser(userSession)}" 
+                     var="comment" 
+                     border="1">
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Title"/>
+                </f:facet>
+                <h:outputText value="#{comment.content}"/>
+            </h:column>
+        </h:dataTable>
     </h:body>
 </html>
 
