--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,13 +1,28 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
         <a href="inscription.xhtml">Inscription</a>
         <a href="connexion.xhtml">Connexion</a>
+        
+        <h:dataTable value="#{imageController.getAllImage()}" 
+                     var="image" 
+                     border="1">
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="image"/>
+                </f:facet>
+                <h:link outcome="image">
+                    <h:graphicImage value="/images/#{image.filename}"/>
+                    <f:param name="img_id" value="#{image.id}"/>
+                </h:link>
+            </h:column>
+        </h:dataTable>
     </h:body>
 </html>
 
