--- a/src/main/webapp/parametres-password.xhtml
+++ b/src/main/webapp/parametres-password.xhtml
@@ -184,25 +184,27 @@
       <div class="row">
         <div class="col-sm-3 sidebar">
           <ul class="nav nav-pills nav-stacked nav-sidebar">
-            <li role="presentation" class="active"><a href="#">Compte</a></li>
-            <li role="presentation"><a href="parametres-password.xhtml">Mot de passe</a></li>
+            <li role="presentation"><a href="parametres.xhtml">Compte</a></li>
+            <li role="presentation" class="active"><a href="#">Mot de passe</a></li>
           </ul>
         </div>
         <div class="col-sm-5 content-right">
-          <h2 class="custom-title">Compte</h2>
-          <form>
-            <div class="form-group">
-              <label for="inputEmail">Email</label>
-              <input type="email" class="form-control" id="inputEmail" value="current.email@test.fr"/>
-            </div>
-            <div class="form-group">
-              <label for="inputPseudo">Pseudo</label>
-              <input type="text" class="form-control" id="inputPseudo" value="CurrentPseudo"/>
-            </div>
-            <button type="submit" class="btn btn-primary">Sauvegarder</button>
-          </form>
-          <br/>
-          <a href="#">Supprimer mon compte</a>
+            <h2 class="custom-title">Mot de passe</h2>
+            <form>
+              <div class="form-group">
+                <label for="oldPassword">Ancien mot de passe</label>
+                <input type="password" class="form-control" id="oldPassword"/>
+              </div>
+              <div class="form-group">
+                <label for="newPassword">Nouveau mot de passe</label>
+                <input type="text" class="form-control" id="newPassword"/>
+              </div>
+              <div class="form-group">
+                <label for="confirmPassword">Confirmer le nouveau mot de passe</label>
+                <input type="text" class="form-control" id="confirmPassword"/>
+              </div>
+              <button type="submit" class="btn btn-primary">Sauvegarder</button>
+            </form>
         </div>
       </div>
     </div>
