--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -99,6 +99,9 @@
               </div>
               <h:commandButton class="btn btn-primary btn-block" value="Se connecter" action="#{authenticateBean.signIn()}"/>
             </div>
+            <div class="modal-footer">
+                <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#inscriptionModal">Pas encore inscrit?</a>
+            </div>  
           </h:form>
         </div>
       </div>
@@ -112,14 +115,15 @@
             <h4 class="modal-title" id="inscriptionTitle">Inscription</h4>
           </div>
           <div class="modal-body">
-            <h:form>
+            <h:form id="subscriptionForm">
               <div class="form-group">
                 <h:outputLabel for="inputEmail">Email</h:outputLabel>
                 <h:inputText class="form-control" id="inputEmail" value="#{joinBean.user.email}">
                     <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
                     <f:validator validatorId="uniqueEmailValidator" />
-                    <f:ajax event="blur" render="m_email" />
+                    <!--<f:ajax event="blur" render="m_email" />-->
                 </h:inputText>
+                <span id="badEmail" class="error-message sr-only">L'email n'est pas valide</span>
               </div>
               <div class="form-group">
                 <h:outputLabel for="inputLogin">Login</h:outputLabel>
@@ -127,26 +131,30 @@
                     <f:validateRegex pattern="[^\W\d_]\w*" />
                     <f:validateLength minimum="3"/>
                     <f:validator validatorId="uniqueUserNameValidator" />
-                    <f:ajax event="blur" render="m_login" />
+                    <!--<f:ajax event="blur" render="m_login" />-->
                 </h:inputText>
+                <span id="badLogin" class="error-message sr-only">Le login doit contenir au moins 3 caractères</span>
               </div>
               <div class="form-group">
-                <h:outputLabel for="inputPassword">Mot de passe</h:outputLabel>
+                <h:outputLabel for="inputPassword">Mot de passe</h:outputLabel>  <span id="badPassword" class="error-message sr-only">L'email n'est pas valide</span>
                 <h:inputSecret class="form-control" id="inputPassword" value="#{joinBean.user.password}">
                     <f:validator validatorId="confirmPasswordValidator" />
                     <f:attribute name="confirm" value="#{confirmPassword.submittedValue}" />
-                    <f:ajax event="blur" execute="password confirm" render="m_password" />
+                    <!--<f:ajax event="blur" execute="password confirm" render="m_password" />-->
                 </h:inputSecret>
               </div>
               <div class="form-group">
                 <h:outputLabel for="confirmPassword">Confirmer mot de passe</h:outputLabel>
                 <h:inputSecret class="form-control" id="confirmPassword" binding="#{confirmPassword}">
-                    <f:ajax event="blur" execute="password confirm" render="m_password m_confirm" />
+                    <!--<f:ajax event="blur" execute="password confirm" render="m_password m_confirm" />-->
                 </h:inputSecret>
               </div>
               <h:commandButton class="btn btn-primary btn-block" value="S'inscrire" action="#{joinBean.join}"/>
             </h:form>
           </div>
+          <div class="modal-footer">
+            <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#connexionModal">Déjà inscrit?</a>
+          </div> 
         </div>
       </div>
     </div>
