modif de l'index

--- a/src/main/webapp/commonLayout.xhtml
+++ b/src/main/webapp/commonLayout.xhtml
@@ -116,7 +116,7 @@
                     <h4 class="modal-title" id="inscriptionTitle">Inscription</h4>
                   </h:panelGroup>
                   <h:panelGroup layout="block" class="modal-body">
-                    <h:form>
+                    <h:form id="subscriptionForm">
                       <h:panelGroup layout="block" class="form-group">
                         <h:outputLabel for="inputEmail">Email</h:outputLabel>
                         <h:inputText class="form-control" id="inputEmail" value="#{joinBean.user.email}">
