--- a/src/main/webapp/commonLayout.xhtml
+++ b/src/main/webapp/commonLayout.xhtml
@@ -9,7 +9,7 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>Bootstrap 101 Template</title>
+        <title><ui:insert name="title">Upemgur</ui:insert></title>
 
         <link rel="stylesheet" href="resources/css/justifiedGallery.min.css"/>
         <script src="resources/js/jquery-1.11.2.min.js"></script>
@@ -69,10 +69,10 @@
                           </a>
 
                           <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Mon profil</a></li>
+                            <li><a href="user.xhtml?userId=#{userSession.id}">Mon profil</a></li>
                             <li><a href="parametres.xhtml">Paramètres</a></li>
                             <li class="divider"></li>
-                            <li><a href="">Se deconnecter</a></li>
+                            <li><a href="">Se déconnecter</a></li>
                           </ul>
                       </li>
                     </ul>
@@ -102,6 +102,9 @@
                         <h:inputSecret class="form-control" id="SignInPassword" value="#{authenticateBean.password}"/>
                       </h:panelGroup>
                       <h:commandButton class="btn btn-primary btn-block" value="Se connecter" action="#{authenticateBean.signIn()}"/>
+                    </h:panelGroup>
+                    <h:panelGroup layout="block" class="modal-footer">
+                        <a href="#" data-dismiss ="modal" data-toggle="modal" data-target="#inscriptionModal">Pas encore inscrit ?</a>
                     </h:panelGroup>
                   </h:form>
                 </h:panelGroup>
@@ -150,6 +153,9 @@
                       </h:panelGroup>
                       <h:commandButton class="btn btn-primary btn-block" value="S'inscrire" action="#{joinBean.join}"/>
                     </h:form>
+                  </h:panelGroup>
+                  <h:panelGroup layout="block" class="modal-footer">
+                    <a href="#" data-dismiss ="modal" data-toggle="modal" data-target="#connexionModal">Déjà inscrit ?</a>
                   </h:panelGroup>
                 </h:panelGroup>
               </h:panelGroup>
