--- a/src/main/webapp/user.xhtml
+++ b/src/main/webapp/user.xhtml
@@ -5,33 +5,37 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:metadata>
-        <f:viewParam name="userId" value="#{detailImageBean.imageId}" />
-        <f:event type="preRenderView" listener="#{detailImageBean.init()}" />
-    </f:metadata>
     <h:head>
     </h:head>
     <h:body> 
-
         <ui:composition template="commonLayout.xhtml">
             <ui:define name="content">
                 <div class="container content">
                     <div class="row">
                         <div class="col-sm-3 sidebar">
                             <ul class="nav nav-pills nav-stacked nav-sidebar">
-                                <li><h3><h:outputText value="#{userSession.userName.substring(0, 1).toUpperCase()}#{userSession.userName.substring(1).toLowerCase()}"/></h3></li>
+                                <li><h3><h:outputText value="#{param['userName'].substring(0, 1).toUpperCase()}#{param['userName'].substring(1).toLowerCase()}"/></h3></li>
                                 <li class="nav-separator"></li>
-                                <li role="presentation" class="active"><a href="#">Images</a></li>
-                                <li role="presentation"><a href="">Commentaires</a></li>
+                                <li role="presentation" class="active"><a href="user.xhtml?userName=#{param['userName']}">Images</a></li>
+                                <li role="presentation"><a href="user-comments.xhtml?userName=#{param['userName']}">Commentaires</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-9 content-right">
                             <div class="image-container">
-                                <ui:repeat value="#{imageController.getImagesByUser(userSession)}" var="image">
+                                <ui:repeat value="#{imageController.getImagesByUser(usersController.getUserByUserName(param['userName']))}" var="image">
+                                    <div>
+                                        <c:if test="#{userSession.userName eq param['userName']}">
+                                            <h:form>
+                                                <h:commandLink type="button" class="close close-image" action="#{imageController.removeImage(image)}" value="&times;">
+                                                    <f:param name="userName" value="#{param['userName']}"/>
+                                                </h:commandLink>
+                                            </h:form>
+                                        </c:if>
                                     <h:link outcome="image.xhtml">
                                         <h:graphicImage alt="#{image.title}" value="/images/#{image.filename}"/>
                                         <f:param name="img_id" value="#{image.id}"/>
                                     </h:link>
+                                    </div>
                                 </ui:repeat>
                             </div>
                         </div>
