--- a/src/main/webapp/image.xhtml
+++ b/src/main/webapp/image.xhtml
@@ -26,7 +26,11 @@
               <div class="row">
                 <h:panelGroup layout="block" class="col-sm-8" id="comments">
                     <h1><h:outputText value="#{detailImageBean.image.title}"/></h1>
-                    <p>par <a href="#"><h:outputText value="#{detailImageBean.image.users.userName.substring(0, 1).toUpperCase()}#{detailImageBean.image.users.userName.substring(1).toLowerCase()}"/></a></p>
+                    <p>par
+                        <h:link outcome="user.xhtml" value="#{detailImageBean.image.users.userName.substring(0, 1).toUpperCase()}#{detailImageBean.image.users.userName.substring(1).toLowerCase()}">
+                            <f:param name="userName" value="#{detailImageBean.image.users.userName}"/>
+                        </h:link>
+                    </p>
                     <p><h:outputText value="#{detailImageBean.image.description}"/></p>
 
                   <h3>Commentaires</h3>
@@ -46,9 +50,17 @@
                   </h:form>
 
                   <ui:repeat value="#{commentController.getCommentsByImage(imageController.getImageById(detailImageBean.imageId))}" var="comment">
-                    <div class="media">
-                      <div class="media-body">
-                          <h4 class="media-heading">#{comment.users.userName.substring(0, 1).toUpperCase()}#{comment.users.userName.substring(1).toLowerCase()}</h4>
+                    <div class="media panel panel-default">
+                      <div class="media-body panel-body">
+                          <h4 class="custom-title">
+                            <h:link outcome="user.xhtml" value="#{comment.users.userName.substring(0, 1).toUpperCase()}#{comment.users.userName.substring(1).toLowerCase()}">
+                                <f:param name="userName" value="#{comment.users.userName}"/>
+                            </h:link>
+                              <small>, le
+                              <h:outputText value="#{comment.time}">
+                                <f:convertDateTime pattern="dd/MM/yyyy à hh:mm" />
+                              </h:outputText>
+                              </small></h4>
                           <h:outputText value="#{comment.content}"/>
                       </div>
                     </div>      
