--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -28,7 +28,7 @@
       </h:head>
       <h:body>
         <div class="container">
-          <form class="admin-index">
+          <h:form class="admin-index">
             <h1>Administration</h1>
             <div class="form-group">
               <h:inputText class="form-control" id="login" value="" p:placeholder="Login"/>
@@ -36,9 +36,9 @@
             <div class="form-group">
               <h:inputText class="form-control" id="password" value="" p:placeholder="Mot de passe"/>
             </div>
-            <h:commandButton class="btn btn-primary btn-block" value="Se connecter" action=""/>       
+            <h:commandButton class="btn btn-primary btn-block" value="Se connecter" />       
             <br/><a href="../index.xhtml">Revenir au site principal</a>
-          </form>
+          </h:form>
         </div>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="../js/bootstrap.min.js"></script>
