--- a/src/main/webapp/image.xhtml
+++ b/src/main/webapp/image.xhtml
@@ -58,31 +58,7 @@
                 <div class="col-sm-4">
                   <h3>Exif <small><span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" href="#exifInfo" aria-expanded="false" aria-controls="collapseExample" aria-hidden="true"></span></small></h3>
                   <div class="collapse" id="exifInfo">
-<pre>Make - Apple
-Orientation - Horizontal (normal)
-X-Resolution - 72 dpi
-Y-Resolution - 72 dpi
-Software - 3.1.2
-Date and Time (Modified) - 2010:02:22 16:50:29
-YCbCr Positioning - Centered
-ISO Speed - 187
-Exif Version - 0221
-Date and Time (Original) - 2010:02:22 16:50:29
-Date and Time (Digitized) - 2010:02:22 16:50:29
-Components Configuration - Y, Cb, Cr, -
-Metering Mode - Average
-Flashpix Version - 0100
-Color Space - sRGB
-Sensing Method - One-chip color area
-Exposure Mode - Auto
-White Balance - Auto
-Sharpness - Soft
-Compression - JPEG (old-style)
-Orientation - Horizontal (normal)
-Thumbnail Offset - 832
-Thumbnail Length - 12332
-Camera ID - 72157620775652629
-Camera Type - Cameraphone</pre>
+                      <pre>#{detailImageBean.image.metadata}</pre>
                   </div>
                 </div>
               </div>
