--- a/src/main/webapp/commonLayout.xhtml
+++ b/src/main/webapp/commonLayout.xhtml
@@ -157,7 +157,7 @@
                             <f:ajax event="blur" execute="password confirmPassword" render="m_password m_confirm" />
                         </h:inputSecret>
                       </div>
-                      <h:commandButton class="btn btn-primary btn-block" value="S'inscrire" action="#{joinController.join}"/>
+                      <h:commandButton id="subscriptionButton" class="btn btn-primary btn-block" value="S'inscrire" action="#{joinController.join}"/>
                     </h:form>
                   </div>
                   <div class="modal-footer">
@@ -177,9 +177,9 @@
                       <h4 class="modal-title" id="connexionTitle">Uploder une image</h4>
                     </div>
                     <div class="modal-body">
-                      <h:form enctype="multipart/form-data">
+                      <h:form id="uploadForm" enctype="multipart/form-data">
                         <div class="form-group">
-                          <h:inputFile id="inputImage" value="#{uploadImageController.part}"/>
+                            <h:inputFile id="inputImage" value="#{uploadImageController.part}" required="true"/>
                         </div>
                         <div class="form-group">
                           <h:outputLabel for="inputTitle" value="Titre"/>
@@ -189,10 +189,10 @@
                           <h:outputLabel for="inputDescription" value="Description"/>
                           <h:inputTextarea class="form-control" rows="3" id="inputDescription" value="#{uploadImageController.image.description}"/>
                         </div>
-                          <h:commandLink class="btn btn-primary" action="#{uploadImageController.uploadFile(userSession)}" value="Envoyer">
+                          <h:commandButton id="uploadButton" class="btn btn-primary" action="#{uploadImageController.uploadFile(userSession)}" value="Envoyer">
                               <!--<f:ajax render="@all" execute="@form"/>-->
                               <!--<f:param name="userName" value="#{userSession.userName}"/>-->
-                          </h:commandLink>
+                          </h:commandButton>
                       </h:form>
                     </div>
                   </div>
