Correction bug commentaires

--- a/src/main/webapp/image.xhtml
+++ b/src/main/webapp/image.xhtml
@@ -49,8 +49,8 @@
                     <div class="media panel panel-default">
                       <div class="media-body panel-body">
                           <h4 class="custom-title">
-                            <h:link outcome="user.xhtml" value="#{comment.users.userName.substring(0, 1).toUpperCase()}#{comment.users.userName.substring(1).toLowerCase()}">
-                                <f:param name="userName" value="#{comment.users.userName}"/>
+                            <h:link outcome="user.xhtml" value="#{comment.user.userName.substring(0, 1).toUpperCase()}#{comment.user.userName.substring(1).toLowerCase()}">
+                                <f:param name="userName" value="#{comment.user.userName}"/>
                             </h:link>
                               <small>, le
                               <h:outputText value="#{comment.time}">
