--- a/src/main/webapp/admin/utilisateur-liste.xhtml
+++ b/src/main/webapp/admin/utilisateur-liste.xhtml
@@ -2,7 +2,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
   <h:head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -49,12 +52,26 @@
           </ul>
         </div>
         <div class="col-sm-9 content-right">
-          <ul class="nav nav-tabs nav-justified">
-            <li role="presentation" class="active"><a href="#">Liste</a></li>
-            <li role="presentation"><a href="#">Ajouter</a></li>
-            <li role="presentation"><a href="#">Rechercher</a></li>
-          </ul><br/>
-          2 résultats<br/><br/>
+            
+          <h:form class="form-inline">
+            <div class="form-group">
+                <h:outputLabel for="search" value="Recherche "/>
+                <h:inputText class="form-control" id="search" value="#{searchUsersController.value}"/>
+            </div>
+            <div class="form-group">
+              <h:selectOneMenu id="searchSelect" class="form-control" value="#{searchUsersController.criteria}">
+                <f:selectItem itemValue="all" itemLabel="all" />
+                <f:selectItem itemValue="userName" itemLabel="pseudo" />
+                <f:selectItem itemValue="email" itemLabel="email" />
+              </h:selectOneMenu>
+            </div>
+              <h:commandButton class="btn btn-default" value="Rechercher" action="#{searchUsersController.search()}">
+                  <f:ajax execute="@form" render=":results"/>
+              </h:commandButton>
+          </h:form>
+          
+          <h:outputText value="#{searchUsersController.users.size()}"/> résultats<br/><br/>
+          <h:panelGroup id="results">
           <table class="table table-striped">
             <tr>
               <th>id</th>
@@ -63,19 +80,30 @@
               <th>date</th>
               <th>action</th>
             </tr>
-            <ui:repeat value="#{usersController.getAllUsers()}" var="user">
+
+            <ui:repeat value="#{searchUsersController.users}" var="user">
                 <tr>
                   <td>#{user.id}</td>
                   <td>#{user.userName}</td>
                   <td>#{user.email}</td>
                   <td>01/01/2015</td>
                   <td>
-                    <a class="clickable glyphicon glyphicon-pencil" aria-hidden="true"></a>
-                    <a class="clickable glyphicon glyphicon-remove" aria-hidden="true"></a>
+                    <h:form>
+                        <h:commandLink class="clickable glyphicon glyphicon-pencil" p:aria-hidden="true">
+                            <f:ajax render="@all edit" execute="@this"/>
+                        </h:commandLink>
+                        <h:commandLink class="clickable glyphicon glyphicon-remove" p:aria-hidden="true" action="#{usersController.removeUser(user)}">
+                            <f:ajax render="@all" execute="@this"/>
+                        </h:commandLink>
+                    </h:form>
                   </td>
+                  <h:form rendered="false" id="edit">
+                      <td><h:inputText/></td>
+                  </h:form>
                 </tr>
             </ui:repeat>
           </table>
+          </h:panelGroup>
         </div>
       </div>
     </div>
