--- a/src/main/webapp/parametres.xhtml
+++ b/src/main/webapp/parametres.xhtml
@@ -42,7 +42,9 @@
                     <h:commandButton class="btn btn-primary" value="Sauvegarder" action="#{usersController.updateUser(userSession)}"/>
                 </h:form>
                 <br/>
-                <a href="#">Supprimer mon compte</a>
+                <h:form>
+                    <h:commandLink value="Supprimer mon compte" action="#{usersController.removeUser(usersController.getUserByUserName(userSession.userName))}"/>   
+                </h:form>
               </div>
           </div>
         </div>
