--- a/src/main/webapp/image.xhtml
+++ b/src/main/webapp/image.xhtml
@@ -34,7 +34,7 @@
                       <h:inputTextarea id="content" class="form-control" rows="3" value="#{postCommentController.comment.content}" p:placeholder="Tapez votre commentaire"/>
                       <div class="submit-comment">
                           <c:if test="#{authController.signedIn}">
-                          <h:commandLink class="btn btn-primary" action="#{postCommentController.postComment(userSession, imageController.getImageById(detailImageBean.imageId))}" value="Envoyer">
+                              <h:commandLink class="btn btn-primary" action="#{postCommentController.postComment(userSession, detailImageBean.image)}" value="Envoyer">
                               <f:ajax render=":comments" execute="@form"/>
                               <f:param name="img_id" value="#{detailImageBean.imageId}"/>
                           </h:commandLink>
@@ -45,7 +45,7 @@
                       </div>
                   </h:form>
 
-                  <ui:repeat value="#{commentController.getCommentsByImage(imageController.getImageById(detailImageBean.imageId))}" var="comment">
+                  <ui:repeat value="#{commentController.getCommentsByImage(detailImageBean.image)}" var="comment">
                     <div class="media panel panel-default">
                       <div class="media-body panel-body">
                           <h4 class="custom-title">
