Suppression de l'option "supprimer mon compte"

--- a/src/main/webapp/parametres.xhtml
+++ b/src/main/webapp/parametres.xhtml
@@ -41,8 +41,8 @@
                   </div>
                     <h:commandButton class="btn btn-primary" value="Sauvegarder" action="#{usersController.updateUser(userSession)}"/>
                 </h:form>
-                <br/>
-                <a href="#">Supprimer mon compte</a>
+                <!--<br/>
+                <a href="#">Supprimer mon compte</a>-->
               </div>
           </div>
         </div>
